# pypeep

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
pypeep/: asgi.py  settings.py  urls.py  wsgi.py
pypeepapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pypeepapp/migrations/: 0001_initial.py  0002_profile_date_modified.py  0003_peep.py  0004_profile_profile_img.py  0005_peep_likes.py  0006_profile_facebook_link_profile_homepage_link_and_more.py  0007_alter_profile_date_modified.py  0008_alter_profile_date_modified.py
pypeepapp/templates/: base.html  edit_peep.html  followers.html  follows.html  home.html  login.html  navbar.html  profile.html  profile_list.html  register.html  search.html  search_user.html  show_peep.html  update_password.html  update_user.html
